# ssh_sync

./: README.md  pyproject.toml  setup.sh  test_upload.sh  upload.sh
ssh_sync/: common.py  ssh_sync.py
